--- a/scss/post_project.scss
+++ b/scss/post_project.scss
@@ -24,14 +24,40 @@
     }
 }
 
-//------ Posts Show
+// ------- Posts Show
 #post_show_content {
     header {
         text-align: center;
         .date {
-            font-size: .0em;
+            font-size: .9em;
             color: $light;
             margin: 0;
+        }
+        h1 {
+            margin: 0;
+        }
+    }
+    hr {
+        margin: 2em auto;
+    }
+}
+
+#share_box {
+    text-align: center;
+    p {
+        padding: 0 0 1rem;
+        margin: 0;
+        font-weight: 700;
+        text-transform: uppercase;
+        color: $dark;
+        font-size: .8em
+    }
+    i {
+        color: $dark;
+        padding: 1em 1.5em;
+        &:hover {
+            color: $highlight;
+            cursor: pointer;
         }
     }
 }
