--- a/blog/app/views/layouts/application.html.erb
+++ b/blog/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
   <body>
     <header id="main_navigation" class="clearfix">
-      <a href="#" class="name">Eric Post</a>
+    <%= link_to "Eric Post", root_path, class: "name" %>
       <nav>
         <%= link_to "Articles", posts_path %>
         <a href="#">Projects</a>
@@ -19,5 +19,14 @@
       </nav>
     </header>
     <%= yield %>
+
+        <footer id="main_footer">
+        <p class="copyright">&copy; 2017 Eric Post</p>
+        <nav>
+            <a href="http://linkedin.com/in/eKioga" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+            <a href="http://github.com/eKioga" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+        </nav>
+    </footer>
+
   </body>
 </html>
