--- a/blog/app/views/posts/show.html.erb
+++ b/blog/app/views/posts/show.html.erb
@@ -1,6 +1,27 @@
-<%= @post.title %><br>
+<div id="post_show_content" class="skinny_wrapper wrapper_padding">
+        <header>
+            <p class="date"><%= @post.created_at.strftime('%A, %B %d') %></p>
+            <h1><%= @post.title %></h1>
+            <hr>
+        </header>
+        <div id="content">
+            <%= @post.content %>
+        </div>
+        <hr>
+        <div id="share_box">
+            <p>Share Post # 1</p>
+            <!-- Twitter -->
+            <a onclick="javascript:window.open('http://twitter.com/share?text=<%= @post.title %> by Eric Post - &amp;url=<%= url_for([@post, {only_path:false}]) %>', '_blank', 'width=800, height=500, top=200, left=300');voice(0);"><i class="fa fa-twitter"></i></a>
+            <!-- Facebook -->
+            <a onclick="javascript:window.open('http://www.facebook.com/sharer.php?=<%= url_for([@post, {only_path:false}]) %>', '_blank', 'width=800, height=500, top=200, left=300');voice(0);"><i class="fa fa-facebook"></i></a>
+            <!-- Google + -->
+            <a onclick="javascript:window.open('https://plus.google.com/share?url=<%= url_for([@post, {only_path:false}]) %>', '_blank', 'width=800, height=500, top=200, left=300');voice(0);"><i class="fa fa-google-plus"></i></a>
+        </div>
+        <hr>
+    </div>
 
-<%= @post.content %>
+
+
 
 <br>
 <br>
