--- a/blog/app/views/posts/show.html.erb
+++ b/blog/app/views/posts/show.html.erb
@@ -5,7 +5,7 @@
             <hr>
         </header>
         <div id="content">
-            <%= @post.content %>
+            <%= markdown @post.content %>
         </div>
         <hr>
         <div id="share_box">
@@ -20,11 +20,9 @@
         <hr>
     </div>
 
-
-
-
-<br>
-<br>
-
 <%= link_to "Edit", edit_post_path(@post) %>
+
+<br>
+<br>
+
 <%= link_to "Delete", post_path(@post), method: :delete, data: { confirm: "Are you sure you want to delete this post?"} %>
