--- a/blog/app/views/posts/show.html.erb
+++ b/blog/app/views/posts/show.html.erb
@@ -17,12 +17,12 @@
             <!-- Google + -->
             <a onclick="javascript:window.open('https://plus.google.com/share?url=<%= url_for([@post, {only_path:false}]) %>', '_blank', 'width=800, height=500, top=200, left=300');voice(0);"><i class="fa fa-google-plus"></i></a>
         </div>
+
         <hr>
+
+        <%= render 'disqus' %>
+
     </div>
 
 <%= link_to "Edit", edit_post_path(@post) %>
-
-<br>
-<br>
-
 <%= link_to "Delete", post_path(@post), method: :delete, data: { confirm: "Are you sure you want to delete this post?"} %>
