Added friendly_id gem and setup friendly_id on posts

--- a/blog/app/views/posts/show.html.erb
+++ b/blog/app/views/posts/show.html.erb
@@ -9,7 +9,7 @@
         </div>
         <hr>
         <div id="share_box">
-            <p>Share Post # 1</p>
+            <p><%= @post.title %></p>
             <!-- Twitter -->
             <a onclick="javascript:window.open('http://twitter.com/share?text=<%= @post.title %> by Eric Post - &amp;url=<%= url_for([@post, {only_path:false}]) %>', '_blank', 'width=800, height=500, top=200, left=300');voice(0);"><i class="fa fa-twitter"></i></a>
             <!-- Facebook -->
