--- a/blog/app/views/layouts/application.html.erb
+++ b/blog/app/views/layouts/application.html.erb
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>Eric Post - DevOps and more!</title>
-    <link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
-    <script src="https://use.fontawesome.com/fc94206092.js"></script>
+    <link href="//fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
+    <script src="//use.fontawesome.com/fc94206092.js"></script>
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
