--- a/blog/app/assets/stylesheets/application.css.scss
+++ b/blog/app/assets/stylesheets/application.css.scss
@@ -94,6 +94,10 @@ hr {
     clear: both;
 }
 
+.hidden {
+    display: none;
+}
+
 #main_navigation {
     padding: 2.5em 5%;
     border-bottom: 1px solid $border;
