--- a/blog/app/views/layouts/application.html.erb
+++ b/blog/app/views/layouts/application.html.erb
@@ -18,6 +18,13 @@
         <a href="contact.html">Contact</a>
       </nav>
     </header>
+
+<% if notice %>
+    <p class="notice"><%= notice %></p>
+<% elsif alert %>
+    <p class="alert"><%= alert %></p>
+<% end %>
+
     <%= yield %>
 
         <footer id="main_footer">
