--- a/blog/app/assets/stylesheets/application.css.scss
+++ b/blog/app/assets/stylesheets/application.css.scss
@@ -98,6 +98,13 @@ hr {
     display: none;
 }
 
+.notice,
+.alert {
+    text-align: center;
+    padding: 1em 0;
+    border-bottom: 1px solid #E9E9E9
+}
+
 #main_navigation {
     padding: 2.5em 5%;
     border-bottom: 1px solid $border;
