--- a/blog/app/views/welcome/index.html.erb
+++ b/blog/app/views/welcome/index.html.erb
@@ -29,11 +29,10 @@
         <div class="col-3 homepage_content">
             <h2>Stuff I've Built</h2>
             <hr>
-            <h3><a href="#">Project Title 1</a></h3>
-            <p class="date">Monday July 10th</p>
-            <h3><a href="#">Project Title 2</a></h3>
-            <p class="date">Monday July 10th</p>
-            <h3><a href="#">Project Title 3</a></h3>
-            <p class="date">Monday July 10th</p>
+            
+            <% @projects.each do |project| %>
+                <h3><a href="#"><%= link_to project.title, project %></a></h3>
+                <p class="date"><%= project.created_at.strftime("%A, %b %d") %></p>
+            <% end %>
         </div>
     </div>
