added conditional edits, destroy and sign out links

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,14 @@
 
   <body>
     <header id="main_navigation" class="clearfix">
-    <%= link_to "Eric Post", root_path, class: "name" %>
+      <%= link_to "Eric Post", root_path, class: "name" %>
       <nav>
         <%= link_to "Articles", posts_path %>
         <%= link_to "Projects", projects_path %>
-        <a href="contact.html">Contact</a>
+        <%= link_to "Contact", new_contact_path %>
+        <% if user_signed_in? %>
+          <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+        <% end %>
       </nav>
     </header>
 
