revised the about text and made the contact page simpler

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,7 +1,11 @@
- <h1 id="page_title">Say Hello!</h1>
+ <h1 id="page_title"><a href="http://linkedin.com/in/eKioga" target="_blank">Message me on Linkedin</a></h1>
+
+      
+<!-- mailer form below - but it's broken atm. 
+I think it's because i am using NoIP on a local server.
 
     <div class="skinny_wrapper wrapper_padding">
-      <%= form_for @contact do |f| %>
+     <%= form_for @contact do |f| %>
         <%= f.label :name %><br>
         <%= f.text_field :name, required: true %>
 
@@ -22,5 +26,7 @@
 
         <%= f.submit 'Send Message', class: "button" %>
 
-      <% end %>
+      <% end %> 
     </div>
+
+-->
