--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,21 +3,17 @@
             <h2>About</h2>
             <hr>
             <p>
-                I'm an unemployed / aspiring DevOps Engineer living in Walnut Creek, California.
+                I'm an aspiring DevOps Engineer living in Walnut Creek, California.
             </p>
             <p>
-                Windows administrator by day, Linux aficionado by night. I have almost a decade of experience as an IT professional under my belt. I started back in 2008 as a humble computer repair technician for a small retail shop. At the very start of 2013, I entered
-                the ever challenging world of enterprise IT support with Bank of West which began the career that I’d grew to love. Once 2015 arrived, I found myself working in a small IT department for a mid-sized company. It was tough at first to go
-                from relying on a large team to having to wear dozens of hats all on my own, but the confidence and knowledge gained from that experience has been extremely rewarding. It was there where my passion for automation, tool-making, streamlining
-                procedures and solving business problems using any sort of technology truly took shape.
+                Windows admin by day, Linux aficionado by night. I have a decade of experience as an IT professional. It all started for me as a computer repair tech for a small retail shop before I quickly grew into enterprise IT support and have worked in various roles ever since. Some examples would be system administration, analysis, automation, tool-making, streamlining procedures and solving business problems by researching, learning and applying the best technological solutions.
             </p>
             <p>
-                Having been outsourced for the 3rd time while working in helpdesk and Windows system administration, I found myself more motivated than ever to bring my Linux and coding hobbies to the forefront along with my passion for automation. My goal is to mix
-                all these together and land my ultimate dream job as a DevOps Engineer.
+                The main purpose of this blog is for me to chronicle my highs and lows as I go about teaching myself stuff. Stuff like Ruby on Rails (how I built this website), Ansible/Capistrano (LXC and Ruby app provisioning). Also as a platform to document any tech related project I’m involved with, past or present. I’m hoping to bring my linux and coding hobbies to the forefront along with my love for automation. My goal is to mix all these passions together and land my DevOps Engineer dream job.
             </p>
         </div>
         <div class="col-2 homepage_content">
-            <h2>Stuff I've Written</h2>
+            <h2>My Articles</h2>
             <hr>
 
             <% @posts.each do |post| %>
@@ -27,7 +23,7 @@
 
         </div>
         <div class="col-3 homepage_content">
-            <h2>Stuff I've Built</h2>
+            <h2>My Projects</h2>
             <hr>
 
             <% @projects.each do |project| %>
