--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,10 +6,10 @@
                 I'm an aspiring DevOps Engineer living in Walnut Creek, California.
             </p>
             <p>
-                Windows admin by day, Linux aficionado by night. I have a decade of experience as an IT professional. It all started for me as a computer repair tech for a small retail shop before I quickly grew into enterprise IT support and have worked in various roles ever since. Some examples would be system administration, analysis, automation, tool-making, streamlining procedures and solving business problems by researching, learning and applying the best technological solutions.
+                Windows admin by day, Linux aficionado by night. I have a decade of experience as an IT professional. It all started for me as a computer repair tech for a small retail shop before I quickly grew into enterprise IT support and have worked in various roles ever since. Some examples would be: system administration, analysis in best practices, automation, tool-making, streamlining procedures and solving business problems by researching, learning and applying the best technological solutions.
             </p>
             <p>
-                The main purpose of this blog is for me to chronicle my highs and lows as I go about teaching myself stuff. Stuff like Ruby on Rails (how I built this website), Ansible/Capistrano (LXC and Ruby app provisioning). Also as a platform to document any tech related project I’m involved with, past or present. I’m hoping to bring my linux and coding hobbies to the forefront along with my love for automation. My goal is to mix all these passions together and land my DevOps Engineer dream job.
+                The main purpose of this blog is for me to chronicle my highs and lows as I go about self-learning. Some great examples are: Ruby on Rails (how I built this website), Ansible/Capistrano (VPS and Ruby app provisioning). This blog is also as a platform to document any tech related project I’m involved with, past or present. I’m hoping to bring my Linux and coding hobbies to the forefront along with my love for automation. My goal is to mix all these passions together and land my DevOps Engineer dream job.
             </p>
         </div>
         <div class="col-2 homepage_content">
