made some minor html changes

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,5 +1,4 @@
- <h1 id="page_title"><a href="http://linkedin.com/in/eKioga" target="_blank">Message me on Linkedin</a></h1>
-
+ <h1 id="page_title">Reach me at <a href="http://linkedin.com/in/eKioga" target="_blank">My Linkedin page</a> or erickpost@gmail.com</h1>
       
 <!-- mailer form below - but it's broken atm. 
 I think it's because i am using NoIP on a local server.
