--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Eric Post - DevOps and more!</title>
+    <title>Eric Post - DevOps</title>
     <link href="//fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
     <script src="//use.fontawesome.com/fc94206092.js"></script>
     <%= csrf_meta_tags %>
