--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,10 +6,13 @@
                 I'm an aspiring DevOps Engineer living in Walnut Creek, California.
             </p>
             <p>
-                Windows admin by day, Linux aficionado by night. I have a decade of experience as an IT professional. It all started for me as a computer repair tech for a small retail shop before I quickly grew into enterprise IT support and have worked in various roles ever since. Some examples would be: system administration, analysis in best practices, automation, tool-making, streamlining procedures and solving business problems by researching, learning and applying the best technological solutions.
+                Windows admin by day, Linux aficionado by night. I have a decade of experience as an IT professional. It all started for me as a computer repair tech for a small retail shop before I quickly grew into enterprise IT support and have worked in various official and unofficial roles ever since. Some examples would be: system administration, engineering, analysis in best practices, automation, tool-making, documentation, streamlining procedures and solving business problems by researching, learning and applying the best technological solutions.
             </p>
             <p>
-                The main purpose of this blog is for me to chronicle my highs and lows as I go about self-learning. Some great examples are: Ruby on Rails (how I built this website), Ansible/Capistrano (VPS and Ruby app provisioning). This blog is also as a platform to document any tech related project I’m involved with, past or present. I’m hoping to bring my Linux and coding hobbies to the forefront along with my love for automation. My goal is to mix all these passions together and land my DevOps Engineer dream job.
+                The main purpose of this blog is for me to chronicle my highs and lows as I go about proving my DevOps prowess to the world. It will also serve as platform for me to share thoughts and project To sum it up, I hope to bring my Linux and coding hobbies to the forefront along with my love for automation. My goal is to mix all these passions together and land my DevOps Engineer dream job. 
+            </p>
+            <p>
+                If you'd like to find out more about what I know, I recommend to check out my <a href="http://eric-post.ddns.net/posts/my-devops-story-or-how-i-got-myself-this-far" target="_blank">My DevOps Story</a> along with my newer articles and projects.
             </p>
         </div>
         <div class="col-2 homepage_content">
